# palaver

./: .gitignore  README.md  pyproject.toml
.opencode/agents/: architect.md  edit.md  review.md
palaver/app/: config.py  connection_manager.py  constants.py  data_utils.py  enums.py  exceptions.py  init.py  main.py  tools.py  websocket_manager.py  ws_event_stream.py
palaver/app/agent_loop/: call_counter.py  loop.py  stream_session.py
palaver/app/agent_router/: __init__.py  autonomous.py  base.py  deterministic.py  incognito.py  round_robin.py  single.py
palaver/app/api/: __init__.py  agents.py  chatrooms.py  keys.py  providers.py
palaver/app/database/: db.py
palaver/app/dataclasses/: agent.py  chatroom.py  events.py  llm.py  message.py  run_deps.py
palaver/app/event_bridges/: base.py  core.py  routing.py  ui.py
palaver/app/event_bridges/routing/: autonomous.py
palaver/app/event_handlers/: base.py  chatroom.py  core.py
palaver/app/events/: __init__.py  agent.py  base.py  system.py  ui.py
palaver/app/models/: agent.py  routing.py
palaver/app/prompts/: __init__.py  base_prompt.txt  incognito_prompt.txt
palaver/app/services/: agent_service.py  chatroom_service.py
palaver/tests/: test_chat_flow.py  test_routing_refactor.py
palaver/ui/: index.html  package-lock.json  package.json  vite.config.ts
palaver/ui/src/: api.ts  app.css  app.tsx  index.css
palaver/ui/src/components/: AgentModal.tsx  ApiKeyModal.tsx  ChatWindow.tsx  CreateChatroomModal.tsx  Message.tsx  MessageInput.tsx  MessageList.tsx  ParticipantsModal.tsx  ProviderModal.tsx  Sidebar.tsx
palaver/ui/src/utils/: avatar.ts
